# QrsTweaks

./: .gitignore  README.md  RoadMap.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
Logs/: 2025-11-13.jsonl
app/: main.py  qdark.qss
app/pages/: dashboard_page.py  games_page.py  passwords_page.py  service_page.py  timeline_page.py  windows_page.py
app/ui/: animations.py  frameless_window.py  suite_window.py  win_blur.py
app/ui/widgets/: card.py  divider.py  glow_indicator.py  toggle.py
assets/profiles/: fortnite.json  minecraft.json
profiles/games/: ApexLegends.qrsgame  BattleFieldAdvanced.qrsgame  CODAdvanced.qrsgame  CODComp.qrsgame  CODWarzone.qrsgame  Cyberpunk.qrsgame  Cyberpunk2077Advanced.qrsgame  FNAdvanced.qrsgame  FNCompetitive.qrsgame  FNLowEndBoost.qrsgame  GTA5.qrsgame  GTA5Advanced.qrsgame  MinecraftJavaAdvanced.qrsgame  MinecraftJavaComp.qrsgame  MinecraftModded.qrsgame  OW2Advanced.qrsgame  PUBGAdvanced.qrsgame  R6SiegeAdvanced.qrsgame  Rust.qrsgame  ValorantAdvanced.qrsgame  ValorantESports.qrsgame  ValorantStability.qrsgame
profiles/system/: CreatorMode.qrsp  Developer.qrsp  ESports.qrsp  Editing.qrsp  Gaming.qrsp  LowPower.qrsp  Minimalist.qrsp  MusicProd.qrsp  Productivity.qrsp  School.qrsp  SilentMode.qrsp  Streaming.qrsp  StreamingGames.qrsp  UltimatePerformance.qrsp
src/qrs/core/: config.py  log_manager.py  paths.py  state.py
src/qrs/modules/: __init__.py  fps_monitor.py  game_optim.py  game_profile.py  telemetry.py  telemetry_live.py  windows_optim.py
src/qrs/service/: __init__.py  daemon.py  (+3 more)
(+3 files in other folders)
