[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrs-tweaks"
version = "0.0.1"
description = "QrsStandalone Suite: Windows optimizer, game optimizer, local password manager (offline, PySide6)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "qrs", email = "you@example.com" }]
dependencies = [
    "PySide6>=6.7.0",
    "cryptography>=43.0.0"
]

[project.scripts]
qrs-tweaks = "app.main:main"
